# glass

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  GLASS_FULL_ENGINEERING_SPEC_v10.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  VISION.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bounded_showcase.md  config.yml
.github/workflows/: ci.yml  pages.yml
bridge/: Cargo.toml  README.md
bridge/src/: http_types.rs  ipc_client.rs  lib.rs  live_session_ws.rs  main.rs  resync.rs  server.rs  snapshot_contract.rs
bridge/tests/: fipc_bridge_errors.rs  http_contract.rs  resync_contract.rs  snapshot_fipc.rs  ws_live_session.rs
collector/: Cargo.toml  README.md
collector/config/: hvt_rules.toml
collector/src/: capability.rs  config.rs  file_lane_ipc_feed.rs  file_lane_retained_loop.rs  file_session.rs  ipc.rs  ipc_dev_tcp.rs  lib.rs  main.rs  pipeline.rs  privilege.rs  procfs_ipc_feed.rs  procfs_retained_loop.rs  procfs_session.rs  procfs_snapshot.rs  raw.rs  self_silence.rs
collector/src/adapters/: fs_file_lane.rs  linux_ebpf.rs  mod.rs  network_lane.rs  procfs_process.rs
collector/tests/: adapter_poll_honesty.rs  export_file_lane_share_safe.rs  export_procfs_share_safe.rs  fs_file_lane_adapter.rs  ipc_and_privilege.rs  ipc_fipc_tcp.rs  procfs_adapter_fixture_linux.rs  procfs_normalize_e2e.rs  raw_and_capability.rs  raw_vs_normalized_boundary.rs  self_silence_pipeline.rs  self_silence_procfs.rs
demos/: README.md
docs/: DEMO_RETAINED_SNAPSHOT.md  F03_F04_FREEZE_PROPOSAL.md  F03_LIVE_BACKLOG_FREEZE_PROPOSAL.md  IMPLEMENTATION_STATUS.md  LAUNCH_DISTRIBUTION.md  PHASE0_FREEZE_TRACKER.md  POST_LAUNCH_LOOP.md  PRIVILEGE_SEPARATION.md  README.md  RELEASE_PACKAGING.md  REPO_BOUNDARIES.md  SANITIZATION_TRUST_CRITERIA.md  TEST_STRATEGY.md  VERTICAL_SLICE_V0.md  VISUAL_REGRESSION_POLICY.md
docs/contracts/: bridge_session_snapshot_bounded_v0.schema.json  live_session_ws_session_delta_v0.md  live_session_ws_skeleton_v1.md
docs/history/: PHASE0_FREEZE_HISTORY.md
docs/long-horizon/: GLASS_FULL_ENGINEERING_SPEC_v10.md  GLASS_V0_BUILD_PLAN.md
docs/media/: README.md
graph_engine/: Cargo.toml
graph_engine/src/: lib.rs
graph_engine/tests/: smoke.rs
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
integration_tests/tests/: golden_scaffold.rs  hvt_policy.rs  repo_layout.rs  resync_scaffold.rs  retained_snapshot_demo_smoke.rs
schema/: glass_event_schema.json
schema/bindings/: README.md
schema/examples/: minimal_event.json
schema/migrations/: 20260409-procfs-normalized-event-kinds.md  README.md
scripts/: bootstrap_check.ps1  bootstrap_check.sh
scripts/retained_snapshot_demo/: demo.ps1  (+2 more)
session_engine/: Cargo.toml
session_engine/src/: error.rs  event.rs  events_seg.rs  export.rs  file_lane_normalize.rs  lib.rs  manifest.rs  pack.rs  procfs_normalize.rs  sanitization.rs  session.rs  validate.rs
session_engine/tests/: envelope_validation.rs  events_seg.rs  export_manifest.rs  file_lane_normalize.rs  file_lane_share_safe_export.rs  manifest_roundtrip.rs  pack_exclusivity.rs  pack_manifest_expectations.rs  pack_roundtrip.rs  pack_validation.rs  procfs_normalize.rs  procfs_share_safe_export.rs  sanitization_fixtures.rs  schema_roundtrip.rs  session_append.rs  session_pack_load.rs
tools/glass-pack/: Cargo.toml  README.md
tools/glass-pack/src/: main.rs
tools/glass-pack/tests/: cli_smoke.rs
viewer/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+143 files in other folders)
