[workspace]
resolver = "2"
members = [
    "session_engine",
    "graph_engine",
    "collector",
    "bridge",
    "integration_tests",
    "tools/glass-pack",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stealtheye/glass"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "1.0.69"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
regex = "1.11"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
