[package]
name = "glass_collector"
version.workspace = true
edition.workspace = true
description = "Glass Linux collector: raw observations, adapters, privilege/IPc boundaries (Phase 2 groundwork)"

[lib]
name = "glass_collector"
path = "src/lib.rs"

[[bin]]
name = "glass-collector"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
session_engine = { path = "../session_engine" }

[dev-dependencies]
tempfile = "3.14"
