[package]
name = "integration_tests"
version.workspace = true
edition.workspace = true
description = "Cross-crate integration and repo bootstrap tests"

[lib]
path = "src/lib.rs"

[dependencies]
session_engine = { path = "../session_engine" }
glass_bridge = { path = "../bridge" }
toml.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
ureq = { version = "2.12", default-features = false, features = ["json"] }
