[package]
name = "glass-pack"
version.workspace = true
edition.workspace = true
description = "CLI: validate and inspect .glass_pack archives"

[[bin]]
name = "glass-pack"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
session_engine = { path = "../../session_engine" }

[dev-dependencies]
session_engine = { path = "../../session_engine" }
tempfile = "3.14"

